--- a/config.env
+++ b/config.env
@@ -8,7 +8,7 @@ OWNER_NAME="᚛..n.th.o.h.n.i.oh._᚜"
 OWNER_NUMBER="254785709109"
 
 #═══════[ BOT PROFILE ]═══════✧#
-BOT_NAME="BWM-XMD"
+BOT_NAME="//---[ .tœ.n.y._xMd. ]---//"
 BOT_IMAGE=""
 STARTING_BOT_MESSAGE='yes'
 
@@ -30,7 +30,7 @@ ANTIDELETE_RECOVER_CONVENTION="no"
 WARN_COUNT=""
 
 #═══════[ MESSAGE HANDLING ]═══════✧#
-STATUS_REACT_EMOJIS="🚀,🌎"
+STATUS_REACT_EMOJIS="😜,🥰,🤣"
 WELCOME_MESSAGE="no"
 GOODBYE_MESSAGE="no"
 
