--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BWM-XMD ",
+  "name": "//---[ .tœ.ñ.y._xMd. ]---//",
   "version": "2.0.0",
   "description": "",
   "main": "body.js",
@@ -19,7 +19,7 @@
     "quantumbot",
     "Ibrahimadams"
   ],
-  "author": "Ibrahim Adams",
+  "author": ".n.th.o.h.n.i.oh._",
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
