--- a/config.env
+++ b/config.env
@@ -27,12 +27,12 @@ GROUPANTILINK_REMOVE="yes"
 GROUPANTILINK_DELETE_ONLY="no"
 ANTIDELETE_SENT_INBOX="yes"
 ANTIDELETE_RECOVER_CONVENTION="no"
-WARN_COUNT=""
+WARN_COUNT="3"
 
 #═══════[ MESSAGE HANDLING ]═══════✧#
 STATUS_REACT_EMOJIS="😜,🥰,🤣"
-WELCOME_MESSAGE="no"
-GOODBYE_MESSAGE="no"
+WELCOME_MESSAGE="yes"
+GOODBYE_MESSAGE="yes"
 
 #═══════[ HEROKU CONFIG ]═══════✧#
 HEROKU_APP_NAME=
