--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "keywords": [
     "bot",
     "Baileys",
-    "Bwmxmd",
+    "//---[.tœ.ñ.y._xMd. ]---//",
     "whatsapp",
     "bwm-bot",
     "quantumbot",
-    "Ibrahimadams"
+    "..n.th.o.h.n.i.oh._"
   ],
-  "author": ".n.th.o.h.n.i.oh._",
+  "author": "..n.th.o.h.n.i.oh._",
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
