--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ PUBLIC_MODE='no'
 
 #═══════[ OWNER DETAILS ]═══════✧#
 OWNER_NAME="᚛..n.th.o.h.n.i.oh._᚜"
-OWNER_NUMBER="+254795709109"
+OWNER_NUMBER="254795709109"
 
 #═══════[ BOT PROFILE ]═══════✧#
 BOT_NAME="//---[ .tœ.n.y._xMd. ]---//"
@@ -35,8 +35,8 @@ WELCOME_MESSAGE="yes"
 GOODBYE_MESSAGE="yes"
 
 #═══════[ HEROKU CONFIG ]═══════✧#
-HEROKU_APP_NAME=
-HEROKU_API_KEY=
+HEROKU_APP_NAME='Tony'
+HEROKU_API_KEY='ptlc_WOpPwY7Mygq'
 
 #═══════[ AUTO REACTIONS ]═══════✧#
 AUTO_REACT="no"
